add integrity protection to audit entries.